tests/suite/manifests/health-check/active-health-check-soda.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: example-active-hc
spec:
  targetRefs:
  - group: core
    kind: Service
    name: soda
  zoneSize: 1m
  healthCheck:
    active:
      interval: 1s
      fails: 2
      passes: 2
