tests/suite/manifests/health-check/grpc-health-check.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: UpstreamSettingsPolicy
metadata:
  name: example-grpc-hc
spec:
  targetRefs:
  - group: core
    kind: Service
    name: grpc-backend
  zoneSize: 1m
  healthCheck:
    active:
      interval: 1s
      grpc:
        service: helloworld.Greeter
        status: "12"
