tests/suite/manifests/health-check/soda-route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soda
  template:
    metadata:
      labels:
        app: soda
    spec:
      containers:
      - name: soda
        image: hashicorp/http-echo:latest
        args:
        - "-listen=:8080"
        - "-text=soda"
        - "-status-code=200"
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soda-bad
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: soda-bad
  template:
    metadata:
      labels:
        app: soda
        app.kubernetes.io/component: soda-bad
    spec:
      containers:
      - name: soda-bad
        image: hashicorp/http-echo:latest
        args:
        - "-listen=:9090"
        - "-text=soda-bad"
        - "-status-code=200"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: soda
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: soda
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soda
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /soda
    backendRefs:
    - name: soda
      port: 80
